Add an image of lasagna under the h1 heading

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,5 +6,11 @@
     </head>
     <body>
         <h1>Lasagna</h1>
+        <img src="../images/lasagna.jpg" alt="extra easy lasagna recipe" width="400">
+        <h2>Easy Lasagna Recipe</h2>
+        <p>An easy lasagna recipe that saves me lots of time. This dish satisfies everyone in the family. Try it tonight!
+        </p>
+        <h3>Ingredients</h3>
+        <ul></ul>
     </body>
 </html>
