Add an "Ingredients" heading & an unordered list
unordered list contains the ingredients needed for the recipe

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -11,6 +11,14 @@
         <p>An easy lasagna recipe that saves me lots of time. This dish satisfies everyone in the family. Try it tonight!
         </p>
         <h3>Ingredients</h3>
-        <ul></ul>
+        <ul>
+            <li>Beef</li>
+            <li>Spaghetti sauce</li>
+            <li>Cheeses</li>
+            <li>Eggs</li>
+            <li>Seasonings</li>
+            <li>Lasagna noodles</li>
+            <li>Water</li>
+        </ul>
     </body>
 </html>
