Add an h3 heading & an unordered list
Added an "Ingredients" heading
and an unordered list of Ingredients needed for the recipe

--- a/recipes/kebabs.html
+++ b/recipes/kebabs.html
@@ -9,5 +9,22 @@
         <img src="../images/kebabs.jpg" width="400">
         <h2>Description</h2>
         <p>This chicken kebab recipe uses a flavorful, yogurt-based marinade. I'd like to think that all the chicken coming off American grills this summer will be as tasty, juicy, and tender as these. Even inexperienced grillers can produce impressive results! I'm not sure how "Turkish" this is — it's loosely based on a lamb marinade I've used for a long time.</p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1 cup whole-milk Greek yogurt</li>
+            <li>6 cloves garlic, minced</li>
+            <li>2 tablespoons olive oil</li>
+            <li>2 tablespoons freshly squeezed lemon juice, or more to taste</li>
+            <li>2 tablespoons ketchup</li>
+            <li>1 tablespoon Aleppo red pepper flakes</li>
+            <li>1 tablespoon kosher salt</li>
+            <li>1 ½ teaspoons ground cumin</li>
+            <li>1 teaspoon freshly ground black pepper</li>
+            <li>1 teaspoon paprika</li>
+            <li>⅛ teaspoon ground cinnamon</li>
+            <li>2 ½ pounds boneless, skinless chicken thighs, halved</li>
+            <li>4 long metal skewers</li>
+        </ul>
     </body>
+
 </html>
