--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <ul>
             <li><a href="./recipes/lasagna.html">Lasagna</a></li>
             <li><a href="./recipes/kebabs.html">Kebabs</a></li>
+            <li><a href="./recipes/biriyani.html">Biriyani</a></li>
         </ul>
     </body>
 </html>
