Add a "Description" heading & a paragraph
Added a "Description" heading and a paragraph describing the recipe

--- a/recipes/biriyani.html
+++ b/recipes/biriyani.html
@@ -7,5 +7,7 @@
     <body>
         <h1>Biriyani</h1>
         <img src="../images/biriyani.jpg" width="400">
+        <h2>Description</h2>
+        <p>Biriyani, a spicy chicken and rice dish, is one of the most well-known Indian-Pakistani dishes</p>
     </body>
 </html>
