--- a/recipes/biriyani.html
+++ b/recipes/biriyani.html
@@ -9,5 +9,28 @@
         <img src="../images/biriyani.jpg" width="400">
         <h2>Description</h2>
         <p>Biriyani, a spicy chicken and rice dish, is one of the most well-known Indian-Pakistani dishes</p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>2 ½ tablespoons olive oil</li>
+            <li>3 tablespoons plain yogurt</li>
+            <li>2 tablespoons distilled white vinegar</li>
+            <li>1 medium onion, sliced</li>
+            <li>2 medium tomatoes, chopped</li>
+            <li>2 small green chile peppers</li>
+            <li>2 cloves garlic, crushed</li>
+            <li>1 tablespoon ginger paste</li>
+            <li>2 tablespoons garam masala</li>
+            <li>1 tablespoon dried mint</li>
+            <li>salt and pepper to taste</li>
+            <li>5 sprigs cilantro</li>
+            <li>1 (3 pound) whole chicken, skin removed and cut into pieces</li>
+            <li>2 quarts water</li>
+            <li>4 cups uncooked basmati rice</li>
+            <li>1 cinnamon stick</li>
+            <li>1 bay leaf</li>
+            <li>4 pods green cardamom</li>
+            <li>1 pod black cardamom</li>
+            <li>¼ teaspoon powdered yellow food coloring</li>
+        </ul>
     </body>
 </html>
