--- a/recipes/biriyani.html
+++ b/recipes/biriyani.html
@@ -32,5 +32,12 @@
             <li>1 pod black cardamom</li>
             <li>¼ teaspoon powdered yellow food coloring</li>
         </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>Heat olive oil in a large skillet over medium heat. Stir in yogurt and vinegar. Add onion; cook and stir until golden and tender. Add tomatoes, chile peppers, garlic, and ginger paste. Cook and stir until tomatoes are tender. Season with garam masala, mint, salt, and pepper. Stir in cilantro.</li>
+            <li>Place chicken into tomato-onion mixture in the skillet. Reduce heat to medium-low, cover, and continue cooking, stirring occasionally, until chicken is no longer pink in the center and the juices run clear, about 45 minutes. An instant-read thermometer inserted into meat should read at least 165 degrees F (74 degrees C).</li>
+            <li>Meanwhile, bring water and rice to a boil in a large pot. Mix in cinnamon stick, bay leaf, green cardamom, and black cardamom. Season with salt. Cover, reduce heat to low, and simmer until rice is tender and water is absorbed, about 20 minutes. Discard cinnamon stick, bay leaf, and cardamom.</li>
+            <li>Spread 1/2 of the cooked rice in the bottom of a large serving dish. Pour chicken mixture on top. Cover with remaining cooked rice. Sprinkle with food coloring; mix to serve.</li>
+        </ol>
     </body>
 </html>
