--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="home-page-heading">Odin Recipes</h1>
         <ul>
             <li><a href="./recipes/lasagna.html">Lasagna</a></li>
             <li><a href="./recipes/kebabs.html">Kebabs</a></li>
