--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,12 +6,12 @@
         <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
-        <h1>Lasagna</h1>
+        <h1 class="lasagna-heading">Lasagna</h1>
         <img src="../images/lasagna.jpg" alt="extra easy lasagna recipe" width="400">
-        <h2>Description</h2>
-        <p>An easy lasagna recipe that saves me lots of time. This dish satisfies everyone in the family. Try it tonight!
+        <h2 class="desc">Description</h2>
+        <p class="desc-p">An easy lasagna recipe that saves me lots of time. This dish satisfies everyone in the family. Try it tonight!
         </p>
-        <h3>Ingredients</h3>
+        <h3 class="ingredients">Ingredients</h3>
         <ul>
             <li>Beef</li>
             <li>Spaghetti sauce</li>
@@ -21,7 +21,7 @@
             <li>Lasagna noodles</li>
             <li>Water</li>
         </ul>
-        <h3>Steps</h3>
+        <h3 class="steps">Steps</h3>
         <ol>
             <li>Cook and drain the ground beef, then stir in the spaghetti sauce and simmer. </li>
             <li>Combine the cottage cheese, 2 cups of mozzarella, eggs, half of the Parmesan, and seasonings.</li>
