Set ul element's class attribute to 'recipe-ul'

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,13 +6,13 @@
         <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
-        <h1 class="lasagna-heading">Lasagna</h1>
+        <h1 class="recipe-heading"->Lasagna</h1>
         <img src="../images/lasagna.jpg" alt="extra easy lasagna recipe" width="400">
-        <h2 class="desc">Description</h2>
+        <h2 class="desc-h">Description</h2>
         <p class="desc-p">An easy lasagna recipe that saves me lots of time. This dish satisfies everyone in the family. Try it tonight!
         </p>
         <h3 class="ingredients">Ingredients</h3>
-        <ul>
+        <ul class="recipe-ul">
             <li>Beef</li>
             <li>Spaghetti sauce</li>
             <li>Cheeses</li>
