Change class names to more meaningful names

--- a/recipes/kebabs.html
+++ b/recipes/kebabs.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title>Kebabs Recipe</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
-        <h1>Kebabs</h1>
+        <h1 class="recipe-heading">Kebabs</h1>
         <img src="../images/kebabs.jpg" width="400">
-        <h2>Description</h2>
-        <p>This chicken kebab recipe uses a flavorful, yogurt-based marinade. I'd like to think that all the chicken coming off American grills this summer will be as tasty, juicy, and tender as these. Even inexperienced grillers can produce impressive results! I'm not sure how "Turkish" this is — it's loosely based on a lamb marinade I've used for a long time.</p>
-        <h3>Ingredients</h3>
+        <h2 class="desc-h">Description</h2>
+        <p class="desc-p">This chicken kebab recipe uses a flavorful, yogurt-based marinade. I'd like to think that all the chicken coming off American grills this summer will be as tasty, juicy, and tender as these. Even inexperienced grillers can produce impressive results! I'm not sure how "Turkish" this is — it's loosely based on a lamb marinade I've used for a long time.</p>
+        <h3 class="ingredients-heading">Ingredients</h3>
         <ul>
             <li>1 cup whole-milk Greek yogurt</li>
             <li>6 cloves garlic, minced</li>
@@ -25,7 +26,7 @@
             <li>2 ½ pounds boneless, skinless chicken thighs, halved</li>
             <li>4 long metal skewers</li>
         </ul>
-        <h3>Steps</h3>
+        <h3 class="steps-heading">Steps</h3>
         <ol>
             <li>Whisk yogurt, garlic, olive oil, lemon juice, ketchup, red pepper flakes, salt, cumin, black pepper, paprika, and cinnamon together in a large bowl.</li>
             <li>Place chicken thigh halves into the yogurt marinade and coat them thoroughly on all sides. Cover the bowl with plastic wrap and refrigerate, 2 to 8 hours.</li>
