--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -11,7 +11,7 @@
         <h2 class="desc-h">Description</h2>
         <p class="desc-p">An easy lasagna recipe that saves me lots of time. This dish satisfies everyone in the family. Try it tonight!
         </p>
-        <h3 class="ingredients">Ingredients</h3>
+        <h3 class="ingredients-heading">Ingredients</h3>
         <ul class="recipe-ul">
             <li>Beef</li>
             <li>Spaghetti sauce</li>
@@ -21,7 +21,7 @@
             <li>Lasagna noodles</li>
             <li>Water</li>
         </ul>
-        <h3 class="steps">Steps</h3>
+        <h3 class="steps-heading">Steps</h3>
         <ol>
             <li>Cook and drain the ground beef, then stir in the spaghetti sauce and simmer. </li>
             <li>Combine the cottage cheese, 2 cups of mozzarella, eggs, half of the Parmesan, and seasonings.</li>
