Change class names to more meaningful names

--- a/recipes/kebabs.html
+++ b/recipes/kebabs.html
@@ -11,7 +11,7 @@
         <h2 class="desc-h">Description</h2>
         <p class="desc-p">This chicken kebab recipe uses a flavorful, yogurt-based marinade. I'd like to think that all the chicken coming off American grills this summer will be as tasty, juicy, and tender as these. Even inexperienced grillers can produce impressive results! I'm not sure how "Turkish" this is — it's loosely based on a lamb marinade I've used for a long time.</p>
         <h3 class="ingredients-heading">Ingredients</h3>
-        <ul>
+        <ul class="ingredients-ul">
             <li>1 cup whole-milk Greek yogurt</li>
             <li>6 cloves garlic, minced</li>
             <li>2 tablespoons olive oil</li>
