--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -12,7 +12,7 @@
         <p class="desc-p">An easy lasagna recipe that saves me lots of time. This dish satisfies everyone in the family. Try it tonight!
         </p>
         <h3 class="ingredients-heading">Ingredients</h3>
-        <ul class="recipe-ul">
+        <ul class="ingredients-ul">
             <li>Beef</li>
             <li>Spaghetti sauce</li>
             <li>Cheeses</li>
