Set class attributes
This change sets some elements' class attributes so they
can be styled

--- a/recipes/biriyani.html
+++ b/recipes/biriyani.html
@@ -3,14 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>Biriyani Recipe</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
-        <h1>Biriyani</h1>
+        <h1 class="recipe-heading">Biriyani</h1>
         <img src="../images/biriyani.jpg" width="400">
-        <h2>Description</h2>
-        <p>Biriyani, a spicy chicken and rice dish, is one of the most well-known Indian-Pakistani dishes</p>
-        <h3>Ingredients</h3>
-        <ul>
+        <h2 class="desc-h">Description</h2>
+        <p class="desc-p">Biriyani, a spicy chicken and rice dish, is one of the most well-known Indian-Pakistani dishes</p>
+        <h3 class="ingredients-heading">Ingredients</h3>
+        <ul class="ingredients-ul">
             <li>2 ½ tablespoons olive oil</li>
             <li>3 tablespoons plain yogurt</li>
             <li>2 tablespoons distilled white vinegar</li>
