Add some styles to recipe pages
Added: new layout, colors and a few more things

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,12 +6,14 @@
         <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
-        <h1 class="recipe-heading"->Lasagna</h1>
-        <img src="../images/lasagna.jpg" alt="extra easy lasagna recipe" width="400">
-        <h2 class="desc-h">Description</h2>
+    <div class="recipe-card">
+        <h1 class="recipe-heading"->Lasagna Recipe</h1>
+        <img src="../images/lasagna.jpg" alt="extra easy lasagna recipe">
+        <h2 class="desc-h">Tasty Lasagna</h2>
         <p class="desc-p">An easy lasagna recipe that saves me lots of time. This dish satisfies everyone in the family. Try it tonight!
         </p>
         <h3 class="ingredients-heading">Ingredients</h3>
+        <div class="list-container">
         <ul class="ingredients-ul">
             <li>Beef</li>
             <li>Spaghetti sauce</li>
@@ -29,5 +31,7 @@
             <li>Bake, covered, for 45 minutes.</li>
             <li>Uncover and continue baking for 10 minutes.</li>
         </ol>
+        </div>
+        </div>
     </body>
 </html>
