--- a/recipes/kebabs.html
+++ b/recipes/kebabs.html
@@ -6,11 +6,13 @@
         <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
-        <h1 class="recipe-heading">Kebabs</h1>
+        <div class="recipe-card">
+        <h1 class="recipe-heading">Kebabs Recipe</h1>
         <img src="../images/kebabs.jpg" width="400">
-        <h2 class="desc-h">Description</h2>
+        <h2 class="desc-h">Turkish Kebabs</h2>
         <p class="desc-p">This chicken kebab recipe uses a flavorful, yogurt-based marinade. I'd like to think that all the chicken coming off American grills this summer will be as tasty, juicy, and tender as these. Even inexperienced grillers can produce impressive results! I'm not sure how "Turkish" this is — it's loosely based on a lamb marinade I've used for a long time.</p>
         <h3 class="ingredients-heading">Ingredients</h3>
+        <div class="list-container">
         <ul class="ingredients-ul">
             <li>1 cup whole-milk Greek yogurt</li>
             <li>6 cloves garlic, minced</li>
@@ -34,6 +36,8 @@
             <li>Using 2 skewers for each kebab, thread half of the chicken thighs onto each pair of skewers making a fairly thick "log" shape.</li>
             <li>Place kebabs on the preheated grill. Do not try to turn them until they begin to unstick from the grill, 3 or 4 minutes. Turn kebabs and grill the other side for 3 to 4 minutes. Continue cooking and turning until chicken is no longer pink in the center, about 6 minutes more. An instant-read thermometer inserted into the center should read at least 165 degrees F (74 degrees C).</li>
         </ol>
+        </div>
+        </div>
     </body>
 
 </html>
