--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     </head>
     <body>
         <h1 class="home-page-heading">Odin Recipes</h1>
-        <ul>
-            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
-            <li><a href="./recipes/kebabs.html">Kebabs</a></li>
-            <li><a href="./recipes/biriyani.html">Biriyani</a></li>
-        </ul>
+        <nav>
+        <a href="./recipes/lasagna.html">Lasagna</a>
+        <a href="./recipes/kebabs.html">Kebabs</a>
+        <a href="./recipes/biriyani.html">Biriyani</a>
+        </nav>
     </body>
 </html>
